# gb-mvc

./: .env  main.py  model.py  pyproject.toml  settings.py  view.py
static/: config.js  hello.css
templates/: hello.html
