[tool.poetry]
name = "mvc"
version = "0.1.0"
description = ""
authors = ["Michele <silviamlteles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
requests = "^2.28.2"
pydantic = {extras = ["dotenv"], version = "^1.10.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
